# mail-analytics

./: .gitignore  .gitmodules  .tool-versions  Cargo.toml
app-rust/: .gitignore  Cargo.toml
app-zig/: .gitignore  build.zig  build.zig.zon
authelia/: configuration.yml
caddy/: Caddyfile  Caddyfile.authelia
cl-dmarc/: .gitignore  Makefile  README.md  dmarc-importer.asd  mail-reader.asd  run-dmarc-importer.lisp  run-mail-reader.lisp
cl-dmarc-cli/: .travis.yml  LICENSE  Makefile  README.md  cl-dmarc-cli-tests.asd  cl-dmarc-cli.asd  notes.org  run-tests.lisp  run.lisp
dmarc-app/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  mix.exs
docs/: dmarc-aggregate-report.xsd  helpful-links.md
haraka/: Dockerfile  package-lock.json  package.json  subscribe.js
kafka/: README.md
lib-rust/: .gitignore  Cargo.toml
public-website/: .gitignore  package-lock.json  package.json
src/: dmarc.rs  lib.rs  main.rs  xmlreader.rs
traefik/: file-provider.yml  traefik.yml
web-backend-v/: Dockerfile  Dockerfile.vlang  Makefile  auth.v  blog.v  main.v
webapp-crystal/: spawn.cr
webapp-design/: package.json
webapp-elixir/: .gitignore  mix.exs
webapp-elixir-phoenix/: .gitignore  README.md  mix.exs
webapp-go/: .gitignore  appconfig.go  existdb.go  go.mod  go.sum  main.go  types.go  webapp.go
webapp-haskell/: CHANGELOG.md  LICENSE  webapp-haskell.cabal
webapp-nim/: .gitignore  (+2 more)
webapp-rust/: Cargo.toml
webapp-rust/src/: existdb.rs  main.rs  views.rs
webapp-rust/src/queries/: query_count.hbs
webapp-rust/src/views/: pageHeader.hbs  queryResult.hbs
(+491 files in other folders)
