[package]
name = "webapp-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
handlebars = "6.3.2"
reqwest = { version = "0.12.15", features = ["json", "deflate", "gzip", "brotli"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
# rocket = "0.5.1"

